--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <div id="main-content">
 
-            <p style="background-color:powderblue; color:darkblue; font-family:georgia;">Bem-vindos à história (resumida) do pseudo-jogador de vôlei Luciano Smanioto, também conhecido no universo da bola como "Morty" ou "Assassino".</p>
+            <p style="background-color:powderblue; color:darkblue; font-family:georgia; font-size:160%;">Bem-vindos à história (resumida) do pseudo-jogador de vôlei Luciano Smanioto, também conhecido no universo da bola como "Morty" ou "Assassino".</p>
 <br>
             <h2 style="background-color:white; color:darkblue;"> * O início</h2>
             <br>
