--- a/index.html
+++ b/index.html
@@ -46,24 +46,24 @@
 
             <p style="background-color:powderblue; color:darkblue; font-family:georgia; font-size:160%;">Bem-vindos à história (resumida) do pseudo-jogador de vôlei Luciano Smanioto, também conhecido no universo da bola como "Morty" ou "Assassino".</p>
 <br>
-            <h2 style="background-color:white; color:darkblue;"> * O início</h2>
+            <h2 style="background-color:white; color:darkblue;font-size:160%;"> * O início</h2>
             <br>
-            <p style="background-color:powderblue; color:darkblue; font-family:georgia;">Tudo começou em 1987, por acaso, em campeonatos escolares.</p>
+            <p style="background-color:powderblue; color:darkblue; font-family:georgia;font-size:160%;">Tudo começou em 1987, por acaso, em campeonatos escolares.</p>
 <br>
 
-                        <h2 style="background-color:white; color:darkblue;"> * O meio</h2>
+                        <h2 style="background-color:white; color:darkblue;font-size:150%;"> * O meio</h2>
             <br>
-            <p style="background-color:powderblue; color:darkblue; font-family:georgia;">Competindo, filiado à Federação Gaúcha de Vôlei, em 1991 fui aprovado na peneira de um clube chamado Sogipa, então campeão brasileiro juvenil. Como o incentivo financeiro era pequeno e minha altura (1m88) era muito baixa para os padrões da época - muito mais baixa ainda pros padrões atuais - acabei não ficando no clube. Jogaria campeonatos federados por outros times até 1999.</p>
+            <p style="background-color:yellow; color:darkblue; font-family:verdana; font-size:150%;">Competindo, filiado à Federação Gaúcha de Vôlei, em 1991 fui aprovado na peneira de um clube chamado Sogipa, então campeão brasileiro juvenil. Como o incentivo financeiro era pequeno e minha altura (1m88) era muito baixa para os padrões da época - muito mais baixa ainda pros padrões atuais - acabei não ficando no clube. Jogaria campeonatos federados por outros times até 1999.</p>
 <br>
 
-                <h2 style="background-color:white; color:darkblue;"> * A aposentadoria</h2>
+                <h2 style="background-color:red; color:green; font-size:140%;"> * A aposentadoria</h2>
             <br>
-            <p style="background-color:powderblue; color:darkblue; font-family:georgia;">Joguei esporadicamente aqui e ali até 2018, quando voltei a jogar regularmente. Porém, com 7 lesões em 5 anos, aposentei a joelheira em novembro de 2022, quando tive uma luxação exposta em um bloqueio</p>
+            <p style="background-color:red; color:green; font-family:serif; font-size:140%;">Joguei esporadicamente aqui e ali até 2018, quando voltei a jogar regularmente. Porém, com 7 lesões em 5 anos, aposentei a joelheira em novembro de 2022, quando tive uma luxação exposta em um bloqueio</p>
 <br>
 
-                <h2 style="background-color:white; color:darkblue;"> * The Walking Dead</h2>
+                <h2 style="background-color:green; color:yellow; font-size:130%;"> * The Walking Dead</h2>
             <br>
-            <p style="background-color:powderblue; color:darkblue; font-family:georgia;">Na FMP, encontrei uma galera praticando e acabei organizando um voleizinho, voltando às quadras, muito na manha, tipo zumbi.</p>
+            <p style="color:white; font-family:georgia; font-size:130%;">Na FMP, encontrei uma galera praticando e acabei organizando um voleizinho, voltando às quadras, muito na manha, tipo zumbi.</p>
 
  </div>
             
