--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>Minha carreira no vôlei</h1>
     </div>
 
-    <div style="background-color:powderblue; color:darkblue; font-family:georgia; font-size:160%; padding:10px;">
+    <div style="background-color:white; color:darkblue; font-family:georgia; font-size:160%; padding:10px;">
 
             <p>Bem-vindos à história (resumida) do pseudo-jogador de vôlei Luciano Smanioto, também conhecido no universo da bola como "Morty" ou "Assassino".</p>
     </div>
