--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Style the header */
 header {
   background-color: #666;
   padding: 30px;
@@ -22,15 +21,13 @@ header {
   color: white;
 }
 
-/* Create two columns/boxes that floats next to each other */
 nav {
   float: left;
   width: 30%;
-  background: #ccc;
+  background: "volei.jpg";
   padding: 50px;
 }
 
-/* Style the list inside the menu */
 nav ul {
   list-style-type: none;
   padding: 50px;
@@ -43,7 +40,6 @@ article {
   background-color: #f1f1f1;
 }
 
-/* Clear floats after the columns */
 section::after {
   content: "";
   display: table;
@@ -62,7 +58,7 @@ section::after {
 <section>
   <nav>
     <ul>
-      <li><body background="volei.jpg"></li>
+      <li><""></li>
     </ul>
   </nav>
   
