--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ section::after {
 <section>
   <nav>
     <ul>
-      <li><""></li>
+      <li><background="volei.jpg"></li>
     </ul>
   </nav>
   
