--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@ article {
   background-color: #f1f1f1;
 }
 
+  article {
+  float: right;
+  padding: 70px;
+  width: 30%;
+  background-color: #6495ED;
+}
+
 section::after {
   content: "";
   display: table;
