--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ section::after {
 <section>
   <nav>
     <ul>
-      <li><body background="volei.jpg"></li>
+      <li><body background="volei2.jpg"></li>
     </ul>
   </nav>
   
