--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ section::after {
 <section>
   <nav>
     <ul>
-      <li><body background="volei2.jpg"></li>
+      <li><body background="voleieditada.jpg"></li>
     </ul>
   </nav>
   
