--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Style the header */
 header {
   background-color: #666;
   padding: 30px;
@@ -22,14 +21,12 @@ header {
   color: white;
 }
 
-/* Create two columns/boxes that floats next to each other */
 nav {
   float: left;
   width: 30%;
   padding: 50px;
 }
 
-/* Style the list inside the menu */
 nav ul {
   list-style-type: none;
   padding: 50px;
@@ -42,7 +39,6 @@ article {
   background-color: #f1f1f1;
 }
 
-/* Clear floats after the columns */
 section::after {
   content: "";
   display: table;
@@ -61,7 +57,7 @@ section::after {
 <section>
   <nav>
     <ul>
-      <li><body background="voleiback.jpg"></li>
+      <li>background="volei2.jpg"></li>
     </ul>
   </nav>
   
