--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ section::after {
 <section>
   <nav>
     <ul>
-      <li>background="volei2.jpg"></li>
+      <background="volei2.jpg">
     </ul>
   </nav>
   
