--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ section::after {
     <p>Competindo, filiado à Federação Gaúcha de Vôlei, em 1991 fui aprovado na peneira de um clube chamado Sogipa, então campeão brasileiro juvenil. Como o incentivo financeiro era pequeno e minha altura (1m88) era muito baixa para os padrões da época - muito mais baixa ainda pros padrões atuais - acabei não ficando no clube. Jogaria campeonatos federados por outros times até 1999.</p>
     
     <h1 style="background-color:white; color:darkblue; font-family:georgia; font-size:160%; padding:10px;">* A Aposentadoria</h1>
-    <p>Joguei esporadicamente aqui e ali até 2018, quando voltei a jogar regularmente. Porém, com 7 lesões em 5 anos, aposentei a joelheira em novembro de 2022, quando tive uma luxação exposta em um bloqueio.</p>
+    <p>Joguei esporadicamente aqui e ali até 2018, quando voltei a jogar regularmente. Porém, com 7 lesões em 5 anos, aposentei a joelheira em novembro de 2022, quando tive uma luxação exposta no mindinho após um bloqueio.</p>
     
     <h1 style="background-color:white; color:darkblue; font-family:georgia; font-size:160%; padding:10px;">* The Walking Dead</h1>
     <p>Na FMP, encontrei uma galera praticando e acabei organizando um voleizinho, voltando às quadras, muito na manha, tipo zumbi.</p>
