--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@ section::after {
   <h2>Minha Carreira no Vôlei</h2>
 </header>
 
-<section>
+<section background="volei2.jpg">
   <nav>
     <ul>
-      <background="volei2.jpg">
+      <>
     </ul>
   </nav>
   
