--- a/index.html
+++ b/index.html
@@ -47,20 +47,13 @@ section::after {
 
 </style>
 </head>
-<body>
 
-
+<body background="voleiback.jpg">
 <header>
   <h2>Minha Carreira no Vôlei</h2>
 </header>
 
-<section background="volei2.jpg">
-  <nav>
-    <ul>
-      <>
-    </ul>
-  </nav>
-  
+ 
   <article>
   	<strong> Bem-vindos à história (resumida) do pseudo-jogador de vôlei Luciano Smanioto, também conhecido no universo da bola como "Morty" ou "Assassino". </strong> 
    
