--- a/index.html
+++ b/index.html
@@ -53,7 +53,13 @@ section::after {
   <h2>Minha Carreira no Vôlei</h2>
 </header>
 
- 
+ <section>
+  <nav>
+    <ul>
+      <li></li>
+    </ul>
+  </nav>
+   
   <article>
   	<strong> Bem-vindos à história (resumida) do pseudo-jogador de vôlei Luciano Smanioto, também conhecido no universo da bola como "Morty" ou "Assassino". </strong> 
    
