--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ section::after {
 </style>
 </head>
 
-<body background="voleinova.jpg">
+<body background="volei2.jpg">
 <header>
   <h2>Minha Carreira no Vôlei</h2>
 </header>
