--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@ section::after {
 </style>
 </head>
 
-<body background="volei2.jpg">
 <header>
   <h2>Minha Carreira no Vôlei</h2>
 </header>
 
+ section {
+  background-image: url("volei2.jpg");
+}
  <section>
   <nav>
     <ul>
