--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ header {
 nav {
   float: left;
   width: 30%;
-  padding: 50px;
-  background-image: url("volei2.jpg");
+  padding: 150px;
+  background-image: url("volei.jpg");
 }
 
 nav ul {
