--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ header {
 nav {
   float: left;
   width: 30%;
-  background-image: url("volei.jpg");
+  background-image: url("volei5.jpg");
   padding: 150px
 }
 
