--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ nav {
   float: left;
   width: 40%;
   background-image: url("volei3.jpg");
+  background-repeat: no-repeat;
   padding: 250px
 }
 
