--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ section::after {
 </head>
 
 <header>
-  <h2>Minha Carreira no Vôlei</h2>
+  <h2>Minha carreira no Vôlei</h2>
 </header>
 
  <section>
