--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ nav {
   width: 40%;
   background-image: url("volei3.jpg");
   background-repeat: no-repeat;
-  padding: 270px
+  padding: 280px
 }
 
 nav ul {
@@ -51,7 +51,7 @@ section::after {
 </head>
 
 <header>
-  <h2>Minha Carreira no Vôlei</h2>
+  <h2>Minha carreira no Vôlei</h2>
 </header>
 
   <body background:"860.jpg";>
