--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@ section::after {
 </head>
 
 <header>
-  <h2>Minha carreira no Vôlei</h2>
+  <h2>Minha Carreira no Vôlei</h2>
 </header>
 
-  <body background:"860.jpg";>
+  <body background="860.jpg";>
  <section>
   <nav>
     <ul>
