--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ header {
 nav {
   float: left;
   width: 40%;
-  background-image: url("quadra.jpg");
+  background-image: url("voleicinza.jpg");
   background-repeat: no-repeat;
   padding: 280px
 }
@@ -54,7 +54,7 @@ section::after {
   <h2>Minha Carreira no Vôlei</h2>
 </header>
 
-  <body background="860.jpg";background-repeat: no-repeat>
+  <body background="quadra.jpg";background-repeat:no-repeat>
  <section>
   <nav>
     <ul>
