--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ header {
 nav {
   float: left;
   width: 40%;
-  background-image: url("voleicinza.jpg");
+  background-image: url("voleic.jpg");
   background-repeat: no-repeat;
   padding: 280px
 }
