--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@ header {
   color: white;
 }
 
+           #profile-image {
+       
+            max-width: 200px;
+            border-radius: 50%;
+            display: block;
+            margin: 0 auto;
+        }
+
+  
 nav {
   float: left;
   width: 40%;
@@ -59,7 +68,8 @@ section::after {
       <li></li>
     </ul>
   </nav>
-   
+
+  <img id="profile-image" src="voleid.jpg">
   <article>
   	<strong> Bem-vindos à história (resumida) do pseudo-jogador de vôlei Luciano Smanioto, também conhecido no universo da bola como "Morty" ou "Assassino". </strong> 
    
