--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@ section::after {
     </ul>
   </nav>
 
+    <article>
   <img id="profile-image" src="voleid.jpg">
-  <article>
-  	<strong> Bem-vindos à história (resumida) do pseudo-jogador de vôlei Luciano Smanioto, também conhecido no universo da bola como "Morty" ou "Assassino". </strong> 
+
+      <strong align=center> Bem-vindos à história (resumida) do pseudo-jogador de vôlei Luciano Smanioto, também conhecido no universo da bola como "Morty" ou "Assassino". </strong> 
    
    <h1 style="background-color:white; color:darkblue; font-family:georgia; font-size:160%; padding:10px;">* O Início</h1>
     <p>Tudo começou em 1987, por acaso, em campeonatos escolares.</p>
