--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ section::after {
 </head>
 
 <header>
-  <h2>Minha Carreira no Vôlei</h2>
+  <h2>Minha Carreira no <b>Vôlei</b></h2>
 </header>
 
   <body background="quadra.jpg";background-repeat:no-repeat>
@@ -71,7 +71,7 @@ section::after {
 
     <article>
   
-      <strong align="center"> Bem-vindos à história (resumida) do pseudo-jogador de vôlei Luciano Smanioto, também conhecido no universo da bola como "Morty" ou "Assassino". </strong> 
+      <strong align="center";> Bem-vindos à história (resumida) do pseudo-jogador de vôlei Luciano Smanioto, também conhecido no universo da bola como "Morty" ou "Assassino". </strong> 
   <br>
   <br>
 <br> 
