--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ section::after {
 
     <article>
   
-      <strong align="center";> Bem-vindos à história (resumida) do pseudo-jogador de vôlei Luciano Smanioto, também conhecido no universo da bola como "Morty" ou "Assassino". </strong> 
+      <h1 align="center"><b>Bem-vindos à história (resumida) do pseudo-jogador de vôlei Luciano Smanioto, também conhecido no universo da bola como "Morty" ou "Assassino".</b></h1> 
   <br>
   <br>
 <br> 
