--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ header {
            #profile-image {
        
             max-width: 200px;
-            border-radius: 50%;
+            border-radius: 70%;
             display: block;
             margin: 0 auto;
         }
@@ -71,11 +71,9 @@ section::after {
 
     <article>
   
-      <h1 align="center"><b>Bem-vindos à história (resumida) do pseudo-jogador de vôlei Luciano Smanioto, também conhecido no universo da bola como "Morty" ou "Assassino".</b></h1> 
+      <h1 align="center">Bem-vindos à história (resumida) do pseudo-jogador de vôlei Luciano Smanioto, também conhecido no universo da bola como <i>"Morty"</i> ou <i>"Assassino"</i>.</h1> 
   <br>
   <br>
-<br> 
-     <br>
 <img id="profile-image" src="voleid.jpg">
       <br>
    <h1 style="background-color:white; color:darkblue; font-family:georgia; font-size:160%; padding:10px;">* O Início</h1>
