--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background: "quadra.jpg";
+  background-repeat: no-repeat
 }
 
 header {
@@ -61,7 +63,7 @@ section::after {
   <h2>Minha Carreira no <b>Vôlei</b></h2>
 </header>
 
-  <body background="quadra.jpg";background-repeat:no-repeat>
+
  <section>
   <nav>
     <ul>
