--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background: "quadra.jpg";
-  background-repeat: no-repeat
+
 }
 
 header {
@@ -23,15 +22,7 @@ header {
   color: white;
 }
 
-           #profile-image {
-       
-            max-width: 200px;
-            border-radius: 70%;
-            display: block;
-            margin: 0 auto;
-        }
-
-  
+   
 nav {
   float: left;
   width: 40%;
@@ -63,7 +54,8 @@ section::after {
   <h2>Minha Carreira no <b>Vôlei</b></h2>
 </header>
 
-
+<body background="quadra.jpg";background-repeat:no-repeat>
+  
  <section>
   <nav>
     <ul>
