--- a/index.html
+++ b/index.html
@@ -67,8 +67,6 @@ section::after {
   
       <h1 align="center">Bem-vindos à história (resumida) do pseudo-jogador de vôlei Luciano Smanioto, também conhecido no universo da bola como <i>"Morty"</i> ou <i>"Assassino"</i>.</h1> 
   <br>
-  <br>
-<img id="profile-image" src="voleid.jpg">
       <br>
    <h1 style="background-color:white; color:darkblue; font-family:georgia; font-size:160%; padding:10px;">* O Início</h1>
     <p>Tudo começou em 1987, por acaso, em campeonatos escolares.</p>
@@ -81,8 +79,10 @@ section::after {
     
     <h1 style="background-color:white; color:darkblue; font-family:georgia; font-size:160%; padding:10px;">* The Walking Dead</h1>
     <p>Na FMP, encontrei uma galera praticando e acabei organizando um voleizinho, voltando às quadras, muito na manha, tipo zumbi.</p>
- 
-     </article>
+
+      <img align="center"; id="profile-image" src="voleid.jpg">
+
+    </article>
 </section>
 
 </body>
