--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-
+  background-image: url("quadra.jpg");
+  background-repeat: no-repeat;
 }
 
 header {
@@ -80,7 +81,7 @@ section::after {
     <h1 style="background-color:white; color:darkblue; font-family:georgia; font-size:160%; padding:10px;">* The Walking Dead</h1>
     <p>Na FMP, encontrei uma galera praticando e acabei organizando um voleizinho, voltando às quadras, muito na manha, tipo zumbi.</p>
 
-      <img align="center"; id="profile-image" src="voleid.jpg">
+      <img id="profile-image" src="voleid.jpg" class="center">
 
     </article>
 </section>
