--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@ body {
   background-repeat: no-repeat;
 }
 
-header {
+  img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+  header {
   background-color: #666;
   padding: 30px;
   text-align: center;
@@ -55,8 +61,6 @@ section::after {
   <h2>Minha Carreira no <b>Vôlei</b></h2>
 </header>
 
-<body background="quadra.jpg";background-repeat:no-repeat>
-  
  <section>
   <nav>
     <ul>
@@ -81,7 +85,7 @@ section::after {
     <h1 style="background-color:white; color:darkblue; font-family:georgia; font-size:160%; padding:10px;">* The Walking Dead</h1>
     <p>Na FMP, encontrei uma galera praticando e acabei organizando um voleizinho, voltando às quadras, muito na manha, tipo zumbi.</p>
 
-      <img id="profile-image" src="voleid.jpg" class="center">
+      <img id="profile-image" src="voleid.jpg" style="width:50%;>
 
     </article>
 </section>
