--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ section::after {
     <h1 style="background-color:white; color:darkblue; font-family:georgia; font-size:160%; padding:10px;">* The Walking Dead</h1>
     <p>Na FMP, encontrei uma galera praticando e acabei organizando um voleizinho, voltando às quadras, muito na manha, tipo zumbi.</p>
 
-      <img src="voleifundo.jpg" style="width:50%;">
+      <img src="voleif.jpg" style="width:50%;">
 
     </article>
 </section>
