--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url("quadra.jpg");
+  background-image: url("quadra2.jpg");
   background-repeat: no-repeat;
 }
 
