--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@ section::after {
   </nav>
 
     <article>
-      <h1 align="center">Bem-vindos à história (resumida) do pseudo-jogador de vôlei Luciano Smanioto, também conhecido no universo da bola como <i>"Morty"</i> ou <i>"Assassino"</i>.</h1> 
+      <h1 align="center"><i>Resumé</i> do pseudo-jogador de vôlei Luciano Smanioto, também conhecido no universo da bola como <i>"Morty"</i> ou <i>"Assassino"</i>.</h1> 
   <br>
    <h1 style="background-color:white; color:darkblue; font-family:georgia; font-size:160%; padding:10px;">* O Início</h1>
     <p>Tudo começou em 1987, por acaso, em campeonatos escolares.</p>
  <br>
  <h1 style="background-color:white; color:darkblue; font-family:georgia; font-size:160%; padding:10px;">* O Meio</h1>
-    <p>Em 1991 fui aprovado na peneira de um clube chamado Sogipa, então campeão brasileiro juvenil. Como o incentivo financeiro era pequeno e minha altura (1m88) era muito baixa para os padrões da época - muito mais baixa ainda pros padrões atuais - acabei não ficando no clube. Jogaria campeonatos federados por outros times até 1999.</p>
+    <p>Em 1991, foi aprovado na peneira da Sogipa, então campeã brasileira juvenil. Como o incentivo financeiro era tão baixo quanto o próprio (1m88 já era baixo para os padrões da época; pros padrões atuais, então, é um anão), saiu do clube. Jogaria campeonatos federados por outros times até 1999.</p>
     <br>
     <h1 style="background-color:white; color:darkblue; font-family:georgia; font-size:160%; padding:10px;">* A Aposentadoria</h1>
-    <p>Joguei esporadicamente aqui e ali até 2018, quando voltei a jogar regularmente. Porém, com 7 lesões em 5 anos, aposentei a joelheira em novembro de 2022, quando tive uma luxação exposta no mindinho após um bloqueio.</p>
+    <p>Brincou de jogar esporadicamente aqui e ali até 2018, quando voltou a jogar regularmente. Porém, com 7 lesões em 5 anos, aposentou a joelheira em novembro de 2022, após uma luxação exposta no mindinho, em um bloqueio.</p>
     <br>
     <h1 style="background-color:white; color:darkblue; font-family:georgia; font-size:160%; padding:10px;">* The Walking Dead</h1>
-    <p>Na FMP, encontrei uma galera praticando e acabei organizando um voleizinho, voltando às quadras, muito na manha, tipo zumbi.</p>
+    <p>Na FMP, encontrou uma galera praticando e acabou organizando um voleizinho, voltando às quadras, muito na manha, tipo zumbi.</p>
 
     </article>
 </section>
