--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>MinhaCarreiranoVôlei</title>
+<title>APátriadeJoelheiras</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -52,7 +52,7 @@ section::after {
 </head>
 
 <header>
-  <h2>Minha Carreira no <b>Vôlei</b></h2>
+  <h2>A Pátria de Joelheiras</h2>
 </header>
 
  <section>
