--- a/index.html
+++ b/index.html
@@ -7,39 +7,50 @@
 <style>
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-body {
+body, html {
   font-family: Arial, Helvetica, sans-serif;
   background-image: url("quadra5.jpg");
   background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100vh; /* Garante que o body ocupe a tela inteira */
 }
 
-  header {
+header {
   background-color: #666;
   padding: 30px;
   text-align: center;
   font-size: 35px;
   color: white;
+  width: 100%; /* Faz o cabeçalho ocupar toda a largura */
 }
 
-   
+section {
+  display: flex; /* Usa flexbox para organizar nav e article */
+  height: calc(100vh - 90px); /* Garante que section preencha o espaço abaixo do header */
+}
+
 nav {
-  float: left;
   width: 40%;
-    padding: 280px
+  background-color: rgba(0, 0, 0, 0.2); /* Apenas para visualizar melhor */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 nav ul {
   list-style-type: none;
-  
 }
 
 article {
-  float: left;
-  padding: 70px;
   width: 60%;
   background-color: #f1f1f1;
+  padding: 20px;
+  overflow: auto; /* Evita que o conteúdo ultrapasse os limites */
 }
 
 section::after {
