--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-<title>APátriadeJoelheiras</title>
+<title>A Pátria de Joelheiras</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -16,8 +16,8 @@ body, html {
   background-image: url("quadra5.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
-  height: 100vh; /* Garante que o body ocupe a tela inteira */
+  background-position: center 90px;
+  height: 100vh;
 }
 
 header {
@@ -26,17 +26,17 @@ header {
   text-align: center;
   font-size: 35px;
   color: white;
-  width: 100%; /* Faz o cabeçalho ocupar toda a largura */
+  width: 100%;
 }
 
 section {
-  display: flex; /* Usa flexbox para organizar nav e article */
-  height: calc(100vh - 90px); /* Garante que section preencha o espaço abaixo do header */
+  display: flex;
+  height: calc(100vh - 90px);
 }
 
 nav {
   width: 40%;
-  background-color: rgba(0, 0, 0, 0.2); /* Apenas para visualizar melhor */
+  background-color: rgba(0, 0, 0, 0.2);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -50,7 +50,7 @@ article {
   width: 60%;
   background-color: #f1f1f1;
   padding: 20px;
-  overflow: auto; /* Evita que o conteúdo ultrapasse os limites */
+  overflow: auto;
 }
 
 section::after {
